--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
 			<div class="portfolio">
 				<div class="title">
 					<div class="all">All</div>
-					<div class="all">Web Development</div>
-					<div class="all">HTML</div>
+					<div class="web active">Web Development</div>
+					
 					<div class="all">Product</div>
 				</div>
 				<div class="projects">
@@ -373,8 +373,8 @@
 				<h3>Testimonials</h3>
 				<p>People who have tasted the awesomeness!</p>
 				<div class="slider">
-					<div class="slide1">
-						<img src="" alt="" />
+					<div class="slide">
+						<img src="imgs/blog1.png" alt="" />
 						<p>John Doe</p>
 						<p>
 							At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -392,8 +392,10 @@
 				<h3>I'm available for freelancing</h3>
 				<div class="view"><button>Hire Me</button></div>
 			</div>
-			<div class="latest-blog">
-				<h3>Latest Blog</h3>
+			<div class="services">
+				<div class="center-box"></div>
+				<div class="center mt-2 my-service">
+					<h3>Latest Blog</h3>
 				<p>
 					Sed ut perspiciatis unde omnis iste natus error sit voluptatem totam
 					rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the
@@ -401,22 +403,26 @@
 				</p>
 				<div class="blogs">
 					<div class="blog">
-						<img src="" alt="" />
+						<img src="imgs/blog1.png" alt="" />
 						<p>26th October,2019</p>
 						<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
 						<p><a href="#">Learn More</a></p>
 					</div>
 					<div class="blog">
-						<img src="" alt="" />
-						<p>26th October,2019</p>
-						<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
-						<p><a href="#">Learn More</a></p>
+						<img src="imgs/blog2.png" alt="" />
+						<div>
+							<p>26th October,2019</p>
+							<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
+							<p><a href="#">Learn More</a></p>
+						</div>
 					</div>
 					<div class="blog">
-						<img src="" alt="" />
-						<p>26th October,2019</p>
-						<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
-						<p><a href="#">Learn More</a></p>
+						<img src="imgs/blog3.png" alt="" />
+						<div>
+							<p>26th October,2019</p>
+							<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
+							<p><a href="#">Learn More</a></p>
+						</div>
 					</div>
 				</div>
 				<div class="view"><button>View All</button></div>
@@ -427,15 +433,70 @@
 						<div>
 							<h3>Contact Me</h3>
 							<ul>
-								<li>Call me</li>
+
+								<li>
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 8l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2M5 3a2 2 0 00-2 2v1c0 8.284 6.716 15 15 15h1a2 2 0 002-2v-3.28a1 1 0 00-.684-.948l-4.493-1.498a1 1 0 00-1.21.502l-1.13 2.257a11.042 11.042 0 01-5.516-5.517l2.257-1.128a1 1 0 00.502-1.21L9.228 3.683A1 1 0 008.279 3H5z" />
+</svg>
+									<div>
+										<span>Call me </span>
+									<p>+234 802 713 1810</p>
+									</div>
+
+									</li>
+								<li>
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+</svg>
+									<div>
+										<span>Email </span>
+									<p>yabacoder@gmail.com</p>
+									</div>
+
+									</li>
+								<li>
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+</svg>
+									<div>
+										<span>Location </span>
+									<p>Yaba, Lagos Nigeria</p>
+									</div>
+
+									</li>
 								<li>Email</li>
 								<li>Location</li>
 							</ul>
 						</div>
-						<p>Find me on</p>
-						<div class="social">Twitter</div>
+						<p class="box">Find me on</p>
+						<div class="social">
+							<div class="icons">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+								>
+									<path
+										d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+									/>
+								</svg>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+								>
+									<path
+										d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+									/>
+								</svg>
+							</div>
+						</div>
 					</div>
 					<div class="drop-line">
+						<h3 class="box">Drop a line</h3>
 						<div><input type="text" placeholder="name" /></div>
 						<div><input type="text" placeholder="email" /></div>
 						<div><input type="text" placeholder="phone" /></div>
@@ -445,7 +506,7 @@
 					</div>
 				</div>
 				<div class="copy">
-					<p>Copyright ©2019Coder. All Rights Reserved.</p>
+					<p>&copy; 2020 YabaCoder. All Rights Reserved.</p>
 				</div>
 			</footer>
 		</div>
