--- a/index.html
+++ b/index.html
@@ -403,17 +403,23 @@
 				</p>
 				<div class="blogs">
 					<div class="blog">
-						<img src="imgs/blog1.png" alt="" />
+						<div>
+							<img src="imgs/blog1.png" alt="" />
 						<p>26th October,2019</p>
 						<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
-						<p><a href="#">Learn More</a></p>
+						<p class="box"><a href="#">Learn More</a> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+</svg></p>
+						</div>
 					</div>
 					<div class="blog">
 						<img src="imgs/blog2.png" alt="" />
-						<div>
-							<p>26th October,2019</p>
-							<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
-							<p><a href="#">Learn More</a></p>
+							<div>
+								<p>26th October,2019</p>
+								<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
+								<p class="box"><a href="#">Learn More</a> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+	<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+	</svg></p>
 						</div>
 					</div>
 					<div class="blog">
@@ -421,7 +427,9 @@
 						<div>
 							<p>26th October,2019</p>
 							<p class="title">I Used The Web For A Day On A 50 MB Budget</p>
-							<p><a href="#">Learn More</a></p>
+							<p class="box"><a href="#">Learn More</a> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+</svg></p>
 						</div>
 					</div>
 				</div>
