--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 						<div class="nav-link"><a href="#">Contact</a></div>
 						<div class="nav-link"><a href="#" class="btn">Hire me</a></div>
 					</div>
+					
+				</div>
+				<div class="mobile-nav">
 					<div class="burger">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
@@ -57,7 +60,7 @@
 				<div class="jumbo">
 					<div class="top-jumbo">
 						<div class="name">
-							<h1>I'm Yabacoder</h1>
+							<h1>I'm Sheriff</h1>
 							<p>A Professional Web developer & Entrepreneur.</p>
 							<div class="top-buttons">
 								<button>Download CV</button>
@@ -149,7 +152,7 @@
 									d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
 								/>
 							</svg>
-							<span>Javascript</span>
+							<span>Web Development</span>
 						</div>
 						<svg
 							class="icon-arrow"
@@ -182,7 +185,7 @@
 									d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
 								/>
 							</svg>
-							<span>HTML</span>
+							<span>Training</span>
 						</div>
 						<svg
 							class="icon-arrow"
@@ -248,7 +251,7 @@
 									d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
 								/>
 							</svg>
-							<span>CSS</span>
+							<span>DevOps</span>
 						</div>
 						<svg
 							class="icon-arrow"
@@ -278,10 +281,10 @@
 									stroke-linecap="round"
 									stroke-linejoin="round"
 									stroke-width="2"
-									d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
+					samsoniyanu@hotmail.com				d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"
 								/>
 							</svg>
-							<span>PHP</span>
+							<span>Consulting</span>
 						</div>
 						<svg
 							class="icon-arrow"
@@ -332,7 +335,7 @@
 						</svg>
 					</div>
 				</div>
-				<div class="view center"><button>View All</button></div>
+				<div class=" center"><button class="view">View All</button></div>
 			</div>
 			<div class="career-highlight">
 				<div>
@@ -353,6 +356,11 @@
 				</div>
 			</div>
 			<div class="portfolio">
+				<div class="center-box"></div>
+				<div class="center mt-2 my-service">
+					<h2>My Portfolio</h2>
+					<p>These are the services I provide.</p>
+				</div>
 				<div class="title">
 					<div class="all">All</div>
 					<div class="web active">Web Development</div>
@@ -360,18 +368,33 @@
 					<div class="all">Product</div>
 				</div>
 				<div class="projects">
-					<div class="proj-1">1</div>
-					<div class="proj-1">2</div>
-					<div class="proj-1">3</div>
-					<div class="proj-1">4</div>
-					<div class="proj-1">5</div>
-					<div class="proj-1">6</div>
+					<div class="proj-1">
+						<img src="imgs/project_1.png" alt="" />
+					</div>
+					<div class="proj-1">
+						<img src="imgs/project_2.png" alt="" />
+					</div>
+					<div class="proj-1">
+						<img src="imgs/project_3.png" alt="" />
+					</div>
+					<div class="proj-1">
+						<img src="imgs/project_4.png" alt="" />
+					</div>
+					<div class="proj-1">
+						<img src="imgs/project_1.png" alt="" />
+					</div>
+					<div class="proj-1">
+						<img src="imgs/project_5.png" alt="" />
+					</div>
 				</div>
-				<div class="view"><button>View All</button></div>
+				<div class="center"><button class="view">View All</button></div>
 			</div>
 			<div class="testimonials">
-				<h3>Testimonials</h3>
-				<p>People who have tasted the awesomeness!</p>
+				<div class="center-box"></div>
+				<div class="center mt-2 my-service box">
+					<h2>Testimonials</h2>
+					<p>These are the services I provide.</p>
+				</div>
 				<div class="slider">
 					<div class="slide">
 						<img src="imgs/blog1.png" alt="" />
@@ -384,6 +407,37 @@
 							animi, id est laborum et dolorum fuga. Et harum quidem rerum
 							facilis est et expedita distinctio.
 						</p>
+					</div>
+					<div class="slide">
+						<img src="imgs/blog1.png" alt="" />
+						<p>John Doe</p>
+						<p>
+							At vero eos et accusamus et iusto odio dignissimos ducimus qui
+							blanditiis praesentium voluptatum deleniti atque corrupti quos
+							dolores et quas molestias excepturi sint occaecati cupiditate non
+							provident, similique sunt in culpa qui officia deserunt mollitia
+							animi, id est laborum et dolorum fuga. Et harum quidem rerum
+							facilis est et expedita distinctio.
+						</p>
+					</div>
+					<div class="slide">
+						<img src="imgs/blog1.png" alt="" />
+						<p>John Doe</p>
+						<p>
+							At vero eos et accusamus et iusto odio dignissimos ducimus qui
+							blanditiis praesentium voluptatum deleniti atque corrupti quos
+							dolores et quas molestias excepturi sint occaecati cupiditate non
+							provident, similique sunt in culpa qui officia deserunt mollitia
+							animi, id est laborum et dolorum fuga. Et harum quidem rerum
+							facilis est et expedita distinctio.
+						</p>
+					</div>
+				</div>
+				<div class="switch">
+					<div class="">
+						<div class="swt"></div>
+						<div class="swt active"></div>
+						<div class="swt"></div>
 					</div>
 				</div>
 			</div>
