--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header>
 				<div class="nav">
 					<div class="logo">
-						<img src="imgs/yc.png" alt="" srcset="" />
+						<img src="imgs/yc.png" alt="" width="200" height="50" srcset="" />
 					</div>
 					<div class="links">
 						<div class="nav-link"><a href="#">About Me</a></div>
@@ -487,7 +487,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="view"><button>View All</button></div>
+				<div class="center"><button class="view">View All</butto></div>
 			</div>
 			<footer>
 				<div class="content">
